--- a/.htaccess
+++ b/.htaccess
@@ -1,9 +1,20 @@
+RewriteEngine On
+	RewriteBase /
+	RewriteCond %{REQUEST_FILENAME}.php -f
+	RewriteRule (.*) $1.php
+
 <filesMatch ".(txt)$">
-FileETag None
-<ifModule mod_headers.c>
-Header unset ETag
-Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
-Header set Pragma "no-cache"
-Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
-</ifModule>
+  FileETag None
+  <ifModule mod_headers.c>
+    Header unset ETag
+    Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+    Header set Pragma "no-cache"
+    Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
+  </ifModule>
 </filesMatch>
+
+<FilesMatch "\.inc.php$">
+	Require all denied
+</FilesMatch>
+
+php_flag display_errors On
